--- a/PlanoDeEstudos/Base.lproj/Main.storyboard
+++ b/PlanoDeEstudos/Base.lproj/Main.storyboard
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="oow-iq-MJD">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="oow-iq-MJD">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -105,6 +104,9 @@
                                         <buttonConfiguration key="configuration" style="filled" title="Cadastrar aula">
                                             <color key="baseBackgroundColor" name="AccentColor"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <action selector="schedule:" destination="Atd-1A-RVZ" eventType="touchUpInside" id="Xrt-sj-nWu"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -119,7 +121,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Cadastro" id="RYH-De-dtL"/>
                     <connections>
-                        <outlet property="dpDate" destination="eIt-aK-ftw" id="xuG-JE-JeP"/>
+                        <outlet property="datePickerDate" destination="eIt-aK-ftw" id="xuG-JE-JeP"/>
                         <outlet property="textFieldCourse" destination="PM4-FY-Xa4" id="v3g-mF-Oh7"/>
                         <outlet property="textFieldSection" destination="ifw-V1-3J6" id="yZ8-Mu-s94"/>
                     </connections>
